--- a/style.css
+++ b/style.css
@@ -52,3 +52,11 @@ footer {
   width: 5%;
   height: 5%;
 }
+#whale-icon {
+  height: 85px;
+  position: absolute;
+  left: 0;
+  padding-left: 3%;
+  padding-top: 2%;
+  padding-bottom: 10%;
+}
