--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ body {
 .normal {
   font-family: "coves-bold";
   letter-spacing: 0.1em;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
 #whale-icon {
@@ -49,6 +51,10 @@ body {
 
 .line-break {
   margin: 40px;
+}
+
+.small-line {
+  max-width: 40%;
 }
 
 .footer-text {
